syntax = "proto2";

package proto;

import "server_only/bin.server.proto";
import "define.proto";

message SavePlayerDataReq {
    optional PlayerData player_data = 1;
    optional uint32 save_stat_id = 2;
    
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10198;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }
}

message SavePlayerDataRsp {
    optional int32 retcode = 1;
    optional uint32 data_version = 2;
    optional uint32 save_stat_id = 3;
    
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10112;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }
}

message PlayerOnlineStatusInfo {
    optional uint32 uid = 1;
    optional uint32 platform_type = 2;
    
    optional StatusType online_status = 3;
    enum StatusType {
        ONLINE = 0;
        OFFLINE = 1;
    }
    
    optional bool is_sub_account = 4;
    optional string country_code = 5;
}

message PlayerOnlineStatusNotify {
    repeated PlayerOnlineStatusInfo player_info_list = 1;
    
    enum Enum {
        NONE = 0;
        CMD_ID = 10135;
    }
}

message ServiceDisconnectNotify {
    optional ServiceType type = 1;
    optional uint32 ip = 2;
    
    enum Enum {
        NONE = 0;
        CMD_ID = 10103;
    }
}

message PlayerDisconnectNotify {
    optional uint32 data = 1;
    
    enum Enum {
        NONE = 0;
        CMD_ID = 10190;
    }
}

message DisconnectClientNotify {
    optional uint32 data = 1;
    
    enum CmdId {
        NONE = 0;
        CMD_ID = 10173;
    }
}

message SysCreateGroupReq {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10199;
    }
}

message SaveBlockDataReq {
    map<uint32, BlockInfo> block_info_map = 1;
    
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10131;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }
}

message SaveBlockDataRsp {
    optional int32 retcode = 1;
    map<uint32, uint32> block_succ_save_map = 2;
    
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 10175;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }
}

message SavePlayerExtraBinDataNotify {
    optional uint32 uid = 1;
    optional bytes player_extra_bin_data = 2;
    
    enum CmdId {
        NONE = 0;
        CMD_ID = 10148;
    }
}

message SysSavePlayerNotify {
    enum CmdId {
        NONE = 0;
        CMD_ID = 10197;
    }
}

message PlayerLoginBlockInfoNotify {
    optional uint64 login_rand = 1;
    map<uint32, BlockInfo> block_info_map = 2;
    
    enum CmdId {
        NONE = 0;
        CMD_ID = 10181;
    }
}
